# robot_arm

docker/: .env  Dockerfile  README.md  build  dev  docker-compose.yaml  setup_tmux.bash
docker/profiles/: dev.yml  sim.yml
pick_n_place_server/: CMakeLists.txt  package.xml
pick_n_place_server/include/: pick_n_place_server_node.h
pick_n_place_server/launch/: map_server.launch.py
pick_n_place_server/src/: pick_n_place_server.cpp  pick_n_place_server_node.cpp
robot_arm_apps/: package.xml  setup.cfg  setup.py
robot_arm_apps/launch/: pick_n_place.launch.py
robot_arm_apps/robot_arm_apps/: moveit_node_demo.py  moveit_py_demo.py  moveit_test.py  pick_n_place.py
robot_arm_commander/: package.xml  setup.cfg  setup.py
robot_arm_commander/robot_arm_commander/: example.py  gripper.py  move_group_interface.py
robot_arm_description/: CMakeLists.txt  package.xml
robot_arm_description/config/: controller.yaml
robot_arm_description/launch/: description.launch.py
robot_arm_description/rviz/: description.rviz
robot_arm_description/urdf/: arm.urdf  arm.urdf.xacro  arm_component.urdf.xacro  arm_mech.urdf.xacro  assembled_arm.urdf.xacro  gripper_mech.urdf.xacro  plugins.urdf.xacro  robot_arm.urdf.xacro
robot_arm_description/urdf/meshes/: base_link.stl  base_mount.stl  elbow_link.stl  finger_link.stl  gripper_link.stl  pan_link.stl  shoulder_link.stl  test.stl  wrist0_link.stl  wrist1_link.stl  wrist2_link.stl
robot_arm_driver/: package.xml  setup.cfg  setup.py
robot_arm_driver/config/: joints.yaml
robot_arm_driver/launch/: robot_arm_driver.launch.py
robot_arm_driver/robot_arm_driver/: joints.yaml  robot_arm_driver.py
robot_arm_gazebo/: CMakeLists.txt  package.xml
robot_arm_gazebo/launch/: gazebo.launch.py  load_controllers.launch.py
robot_arm_gazebo/models/Banana for Scale/: model.sdf
robot_arm_gazebo/models/Bradshaw_International_11642_7_Qt_MP_Plastic_Bowl/: model.sdf
robot_arm_gazebo/models/Crunch_Girl_Scouts_Candy_Bars_Peanut_Butter_Creme_78_oz_box/: metadata.pbtxt  model.config  model.sdf
robot_arm_gazebo/models/Nestle_Candy_19_oz_Butterfinger_Singles_116567/: metadata.pbtxt  model.config  model.sdf
robot_arm_gazebo/models/Threshold_Porcelain_Spoon_Rest_White/: model.sdf
robot_arm_gazebo/worlds/: robot_arm.sdf
robot_arm_moveit_config/: CMakeLists.txt  package.xml
robot_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_cpp.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml  sensors_3d.yaml  trajectory_execution.yaml
robot_arm_moveit_config/launch/: demo.launch.py  gazebo.launch  gazebo.launch.py  move_group.launch.py  moveit.launch.py  moveit.rviz  moveit_rviz.launch.py
robot_arm_msgs/: CMakeLists.txt  package.xml
robot_arm_msgs/srv/: GripperPose.srv
robot_arm_perception/: package.xml  setup.cfg  setup.py
robot_arm_perception/config/: calibrate.yaml  camera_transform_publisher.yaml
robot_arm_perception/dataset/synthetic/: data_collection.sdf  data_collection2.sdf
robot_arm_perception/dataset/synthetic/models/tictac_green/: model.sdf
robot_arm_perception/dataset/synthetic/models/tictac_green/meshes/: tictac_green.dae
robot_arm_perception/dataset/synthetic/models/tictac_orange/: model.sdf
robot_arm_perception/dataset/synthetic/models/tictac_orange/meshes/: tictac_orange.dae
robot_arm_perception/dataset/synthetic/models/tictac_white/: model.config  model.sdf
robot_arm_perception/dataset/synthetic/models/tictac_white/meshes/: tictac_white.dae
robot_arm_perception/env-hooks/: robot_arm_perception.sh.in
robot_arm_perception/launch/: calibrate.launch.py  camera_transform_publisher.launch.py
robot_arm_perception/robot_arm_perception/: calibrate.py  camera_transform_publisher.py  object_finder.py  object_finder_server.py  perception_client.py  transforms.py  utils.py
robot_arm_perception/robot_arm_perception/algorithms/: algorithms.py  test.py
robot_arm_perception/robot_arm_perception/geom/: geometry.py
robot_arm_perception/robot_arm_perception/numpify/: image.py  point_cloud2.py  registry.py
robot_arm_python/: package.xml  setup.cfg  setup.py
robot_arm_python/robot_arm_python/: gripper.py  moveit.py  robot_arm.py  utils.py
robot_arm_server/: CMakeLists.txt  package.xml
robot_arm_server/include/: robot_arm_server_node.h
robot_arm_server/launch/: map_server.launch.py  robot_arm_server.launch.py
robot_arm_server/src/: robot_arm_server.cpp  robot_arm_server_node.cpp
