<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_apps</name>
  <version>0.0.0</version>
  <description>ROS2 Robot Arm Application</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>Apache2.0</license>
  <exec_depend>robot_arm_driver</exec_depend>
  <exec_depend>robot_arm_perception</exec_depend>
  <exec_depend>robot_arm_moveit_config</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
