<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_perception</name>
  <version>0.0.0</version>
  <description>ROS2 Robot Arm Perception Modules</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>Apache2.0</license>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>perception-pcl</exec_depend>
  <exec_depend>sensor-msgs-py</exec_depend>
  <exec_depend>robot_arm_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
