<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_arm_python</name>
    <version>0.0.0</version>
    <description>Robot Arm Python Library</description>
    <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
    <license>Apache 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
